# pyro_demo

./: .env  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  pyproject.toml
pyro_demo/: env.py
pyro_demo/versions/: d40e59390ffd_add_docker_debug_container_ids.py  d57297145566_create_all_nessesary_tables.py
src/: auth.py  models.py  settings.py  types.py
src/commands/: build_error.py  code_run.py  run_missmatch_error.py  run_result.py
src/db/: __init__.py  db_session.py  models.py  types.py
